fixed font and spacing styling as per feedback

--- a/styles/partials/_font.scss
+++ b/styles/partials/_font.scss
@@ -1,24 +1,20 @@
 @font-face {
-    font-family: "Avenir Next";
-    src: url("../../Assets/Font/AvenirNextLTPro-Regular.otf") format("opentype");
+  font-family: "Avenir Next Regular";
+  src: url("../../Assets/Font/AvenirNextLTPro-Regular.otf") format("opentype");
 
-    font-weight: 400;
+  font-weight: 400;
 }
 
 @font-face {
-    font-family:'Avenir Next';
-    src: url("../../Assets/Font/AvenirNextLTPro-Demi.otf") format('opentype');
+  font-family: "Avenir Next Demi";
+  src: url("../../Assets/Font/AvenirNextLTPro-Demi.otf") format("opentype");
 
-    font-weight: 600;
+  font-weight: 600;
 }
 
 @font-face {
-    font-family:'Avenir Next';
-    src: url('../../Assets/Font/AvenirNextLTPro-Bold.otf') format('opentype');
+  font-family: "Avenir Next Bold";
+  src: url("../../Assets/Font/AvenirNextLTPro-Bold.otf") format("opentype");
 
-    font-weight: 700;
+  font-weight: 700;
 }
-
-
-
-
