--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,200 +1,201 @@
-@import "partials/mixins"; 
+@import "partials/mixins";
 @import "partials/variables.scss";
-@import url("../styles/partials/_font.scss");
+@import "partials/_font";
 
-body{
-    font-family: 'Avenir Next';
+body {
+  font-family: "Avenir Next";
 }
 
 .hero__shows {
+  @include heroimage(
+    url("../Assets/Images/Photo-gallery-3.jpg"),
+    cover,
+    center
+  );
 
-    @include heroimage (url("../Assets/Images/Photo-gallery-3.jpg"), cover, center);
+  &-background {
+    @include backgroundfilter;
+    @include greyscale;
+  }
 
-    &-background {
-        @include backgroundfilter;
-        @include greyscale;
+  &-album {
+    font-size: 14px;
 
-    }
+    color: $alabaster;
 
+    padding: 1rem;
+    padding-top: 2rem;
+  }
+
+  &-title {
+    @include title-mobile;
+    font-size: 24px;
+
+    width: 80%;
+
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+
+    color: $white;
+  }
+
+  &-soundcloud {
+    padding: 0 1rem;
+  }
+
+  @include tablet {
     &-album {
-        @include title-mobile;
-        font-size: 14px;
+      font-size: 36px;
 
-        color: $white;
-
-        padding: 1rem;
-        padding-top: 2rem
-
-        
+      padding-left: 3rem;
+      padding-top: 3rem;
     }
 
     &-title {
-        @include title-mobile;
-        font-size: 24px;
+      width: 80%;
 
-        width: 80%;
+      padding-left: 3rem;
+      padding-bottom: 3rem;
 
-        padding-bottom: 1rem;
-        padding-left: 1rem;
-
-        color: $white;
+      font-size: 60px;
     }
 
     &-soundcloud {
-        padding: 0 1rem;
+      width: 70%;
+
+      padding-left: 3rem;
+      padding-bottom: 3rem;
     }
+    @include desktop {
+      &-background {
+        @include flex(flex, none, center, none);
+      }
 
-    @include tablet {
+      &-album {
+        padding-left: 6rem;
+      }
 
-        &-album {
-            font-size: 36px;
+      &-title {
+        width: 90%;
+        padding-left: 6rem;
+        padding-bottom: 6rem;
+      }
 
-            padding-left: 3rem;
-        }
-
-        &-title {
-    
-            width: 80%;
-
-            padding-left: 3rem;
-
-            font-size: 60px;
-        }
-
-        &-soundcloud {
-            width: 70%;
-
-            padding-left: 3rem;
-        }
-        @include desktop {
-            
-            &-background {
-                @include flex(flex, none, center, none);
-            }  
-            
-            &-album {
-                padding-left: 6rem;
-            }
-
-            &-title {
-                width: 90%;
-                padding-left: 6rem;
-                padding-bottom: 6rem;
-
-            }
-
-            &-soundcloud {
-                padding-right: 6rem;
-            }
-        }
+      &-soundcloud {
+        padding-right: 6rem;
+      }
     }
+  }
 }
 
 .shows {
+  &__title {
+    font-family: "Avenir Next Demi";
+    margin: 1.5rem 1rem;
+
+    font: 24px;
+  }
+
+  &__list {
+    border-bottom: $mercury solid 1px;
+
+    &:hover {
+      background-color: $alabaster;
+    }
+
+    &--selected {
+      background-color: $silver;
+    }
+  }
+
+  &__content-container {
+    margin: 1rem;
+  }
+
+  &__content-subhead {
+    padding-bottom: 0.5rem;
+
+    color: $mercury;
+    font-size: 14px;
+  }
+
+  &__date {
+    color: $bandsite-black;
+    font-size: 14px;
+    font-family: "Avenir Next Demi";
+  }
+
+  &__button {
+    width: 90%;
+    height: 40px;
+
+    margin: 0 1rem;
+    margin-bottom: 1rem;
+
+    font-family: "Avenir Next Demi";
+    @include button;
+  }
+
+  @include tablet {
+    margin: 0 1rem;
+
+    margin-bottom: 2rem;
 
     &__title {
-        margin: 1.5rem 1rem;
-
-        font: 24px;
     }
 
     &__list {
-        border-bottom: $mercury solid 1px;
+      @include flex(flex, none, center, space-evenly);
 
-        &:hover {
-            background-color: $alabaster;
+      &:not(:first-child) {
+        & > div > h4 {
+          display: none;
         }
-
-        &--selected {
-            background-color: $silver;
-        }
-    }
-
-    &__content-container{
-        margin: 1rem;
-    }
-
-    &__content-subhead {
-        padding-bottom: 0.5rem;
-
-        color: $mercury;
-        font-weight: 400;
-    }
-
-    &__date{
-        color: $bandsite-black;
-        font-size: 14px;
-        font-weight: 600;
+      }
     }
 
     &__button {
-        width: 90%;
-        height: 40px;
-
-        margin: 0 1rem;
-        margin-bottom: 1rem;
-
-        @include button
+      width: 150px;
+      margin: 1rem 0;
     }
 
-    @include tablet {
+    &__content-container {
+      width: 25%;
+      padding: 0 1rem;
+      margin-bottom: 1rem;
+    }
+    &__content-subhead {
+      margin-top: -2rem;
+      margin-bottom: 1rem;
+    }
+  }
 
-        &__title {
-        }
+  @include desktop {
+    @include flex(flex, none, none, space-around);
 
-        &__list {
-            @include flex (flex, none, center, space-evenly);
+    padding: 1rem 2rem;
 
-            &:not(:first-child) {
-                & > div > h4 {
-                    display: none; 
-                }  
-            } 
-        }
+    &__title {
+      margin: 1.5rem 1rem;
 
-        &__button {
-            width: 150px;
-            margin: 0;
-        }
-        
-        &__content-container {
-           width: 25%; 
-           padding: 0 1rem;
-                  
-        }
-        &__content-subhead {
-            margin-top: -2rem;
-            margin-bottom: 1rem;
-        }
+      font-size: 36px;
+    }
 
-        }
+    &__container {
+      width: 70%;
+      padding-top: 3.2rem;
+    }
 
-        @include desktop {
-            @include flex(flex, none, none, space-around);
+    &__list {
+    }
 
-            padding: 1rem 2rem;
+    &__content-subhead {
+      margin-top: -2.5rem;
+      margin-bottom: 1rem;
+    }
 
-            &__title {
-                margin: 1.5rem 1rem;
-            }
-
-            &__container {
-                width:70%;
-                padding-top: 3.2rem;
-            }
-
-            &__list {
-               
-            }
-
-            &__content-subhead {
-                margin-top: -2.5rem;
-                margin-bottom: 1rem;
-            }
-
-            &__button {
-                margin: 0.5rem 0;
-            }
-        }
-
+    &__button {
+      margin: 0.5rem 0;
+    }
+  }
 }
